Proper index.html for calivista.com

--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
     <meta charset="utf-8"><link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet"><link href="libs/fontawesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/teststyle5.css" rel="stylesheet"><link href="libs/fontawesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Signika+Negative:400,600" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Jacques+Francois:400,700" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/png" href="img/icon.png">
@@ -128,15 +145,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="team-member"><img class="team-thumb" src="./img/team/cahill.jpg"> <span class="team-name">David Cahill</span> <span class="team-job">Cahill Imports</span>
-                  <div class="team-details">
-                    <div class="team-details-member"><img class="team-photo" src="./img/team/large/cahill.jpg">
-                      <h3 class="title">David Cahill</h3>
-                      <h4 class="subtitle">Cahill Imports</h4>
-                      <p class="about">David Cahill is our importer and distributor in the MidWest, USA.</p>
-                    </div>
-                  </div>
-                </li>
+
               </ul>
             </div>
           </div>
@@ -144,18 +153,18 @@
           <div class="row">
             <ul id="photo-gallery" class="clearing-thumbs gallery" data-clearing="">
               <li><a data-image="./img/gallery/large/firstvine.jpg" data-caption="Dave plants the first vine (2008)" class="photo"><img src="./img/gallery/firstvine.jpg"></a></li>
-              <li><a data-image="./img/gallery/large/mountains.jpg" data-caption="" class="photo"><img src="./img/gallery/mountains.jpg"></a></li>
+              <li><a data-image="./img/gallery/large/mountains.jpg" data-caption="View of the vineyard &amp; Andes Mountains" class="photo"><img src="./img/gallery/mountains.jpg"></a></li>
               <li><a data-image="./img/gallery/large/house2014.jpg" data-caption="CaliVista house" class="photo"><img src="./img/gallery/house2014.jpg"></a></li>
+              <li><a data-image="./img/gallery/large/reservoir.jpg" data-caption="CaliVista reservoir for irrigation" class="photo"><img src="./img/gallery/reservoir.jpg"></a></li>
               <li><a data-image="./img/gallery/large/sunset.jpg" data-caption="Sunset at CaliVista" class="photo"><img src="./img/gallery/sunset.jpg"></a></li>
-              <li><a data-image="./img/gallery/large/house.jpg" data-caption="CaliVista reservoir for irrigation" class="photo"><img src="./img/gallery/house.jpg"></a></li>
-              <li><a data-image="./img/gallery/large/grapes.jpg" data-caption="" class="photo"><img src="./img/gallery/grapes.jpg"></a></li>
-              <li><a data-image="./img/gallery/large/harvest.jpg" data-caption="Harvest time at CaliVista" class="photo"><img src="./img/gallery/harvest.jpg"></a></li>
-              <li><a data-image="./img/gallery/large/grapes2.jpg" data-caption="" class="photo"><img src="./img/gallery/grapes2.jpg"></a></li>
+              <li><a data-image="./img/gallery/large/grape_bunch.jpg" data-caption="Healthy grapes" class="photo"><img src="./img/gallery/grape_bunch.jpg"></a></li>
+              <li><a data-image="./img/gallery/large/entrance.jpg" data-caption="CaliVista Entrance" class="photo"><img src="./img/gallery/entrance.jpg"></a></li>
+              <li><a data-image="./img/gallery/large/grapes2.jpg" data-caption="Freshly picked grapes" class="photo"><img src="./img/gallery/grapes2.jpg"></a></li>
             </ul>
           </div>
 
           <div class="row">
-            <div class="renting-info col-xs-12 col-sm-offset-3 col-sm-6 large-centered columns">If you would like to have the best Mendoza experience, stay in CaliVista! For more information, <a href="#visit" data-scroll="">see our visit page</a>.</div>
+            <div class="renting-info col-xs-12 col-sm-offset-3 col-sm-6 large-centered columns">If you would like to live the Mendoza experience, stay in our CaliVista Air BnB! <br> For more information, <a href="#visit" data-scroll="">click here</a>.</div>
           </div>
         </div>
       </section>
@@ -179,29 +188,62 @@
           </div>
 
           <div class="row">
-            <div class="col-sm-3 col-xs-12 columns winebottle hidden-xs"><img src="img/bottle_small_malbec.png" id="wine_malbec" alt="Malbec">
+            <div class="col-sm-3 col-xs-12 columns winebottle hidden-xs"><img src="img/bottle_blend.png" id="wine_malbec" alt="Malbec">
             </div>
             <div class="col-sm-6 col-xs-12 columns">
-              <p class="intro">We developed the Malbec and Chardonnay wines in collaboration with our winemaker Mauricio Loroa. We have carefully selected grapes from the very best parcel of our 70 acre vineyard near Tupungato, Mendoza.</p>
+              <p class="intro">We developed the Malbec, Pinot Noir, and Chardonnay wines in collaboration with our winemaker Mauricio Loroa. We have carefully selected grapes from the very best parcel of our 70 acre vineyard near Tupungato, Mendoza.</p>
               <div class="row wines">
-                <div class="wine col-sm-6 col-xs-12 columns block1"><span class="wine_inline wine_malbec_inline visible-xs"><img src="img/bottle_small_malbec.png" alt="Malbec"></span>
-                  <h3 class="subtitle">Malbec</h3>
-                  <p>This wine aged for 14 months in French (70%) and American (30%) Oak barrels. This Malbec has a deep violec color. You will find the flavors intense with a taste of ripe plums and hints of white pepper. Storing in oak barrels adds complexity as well as traces of coconut and vanilla flavors. This wine has a great structure and body with ripe solt tannins, balanced acidity and a long persistent finish. The flavors reflect the long hot days, cool nights and the clean air of Valle de Uco. It is best to experience this fine wine at 65° F.</p>
-                  <p class="order-wrapper"><a id="order_button" target="blank" href="mailto:contact@calivista.com" class="btn btn-lg btn-default">Order now</a></p>
+                <div class="wine col-sm-6 col-xs-12 columns block1"><span class="wine_inline wine_malbec_inline visible-xs"><img src="img/bottle_blend.png" alt="Malbec"></span>
+                  <h3 class="subtitle">Malbec Blend</h3>
+                  <p>This 2013 blend has an intense red color with violet hues. It exhibits a complex and deep aroma of ripe fruit with fresh spices. Upon first taste is soft and sweet with remarkable volume that persists until the cool finish. Uco Valley at its finest. Ideal to serve with grilled red meats.</p>
                 </div>
 
-                <div class="col-sm-6 col-xs-12 columns block2"><span class="wine_inline wine_chardonnay_inline visible-xs"><img src="img/bottle_small_chardonnay.png" alt="Chardonnay"></span>
-                  <h3 class="subtitle">Chardonnay</h3>
-                  <p>This wine was derived from 100% Chardonnay grapes. So that the unique qualities inherent in our high-altitude grapes can be best appreciated, we have chosen not to oak this distinctive wine. You will find this wine with butterscotch, lemon, pineapple and vanilla tastes and flavors reflecting the long hot days, cool nights and the clean air of Valle de Uco. It is best to experience this fine wine at 55° F.</p>
-                  <p class="order-wrapper"><a id="order_button" target="blank" href="mailto:contact@calivista.com" class="btn btn-lg btn-default">Order now</a></p>
+                <div class="col-sm-6 col-xs-12 columns block2"><span class="wine_inline wine_chardonnay_inline visible-xs"><img src="img/bottle_malbec.png" alt="Chardonnay"></span>
+                  <h3 class="subtitle">Malbec</h3>
+                  <p>This 2013 wine aged for 14 months in French (70%) and American (30%) Oak barrels. This Malbec has a deep violec color. You will find the flavors intense with a taste of ripe plums and hints of white pepper. Storing in oak barrels adds complexity as well as traces of coconut and vanilla flavors. This wine has a great structure and body with ripe solt tannins, balanced acidity and a long persistent finish. The flavors reflect the long hot days, cool nights and the clean air of Valle de Uco. It is best to experience this fine wine at 65° F.</p>
                 </div>
               </div>
             </div>
 
-            <div class="col-sm-3 col-xs-12 columns winebottle hidden-xs"><img src="img/bottle_small_chardonnay.png" id="wine_chardonnay" alt="Chardonnay">
+            <div class="col-sm-3 col-xs-12 columns winebottle hidden-xs"><img src="img/bottle_malbec.png" id="wine_chardonnay" alt="Chardonnay">
             </div>
           </div>
+
+          <div class="row">
+            <div class="col-sm-3 col-xs-12 columns winebottle hidden-xs"><img src="img/bottle_pinotnoir.png" id="wine_malbec" alt="Malbec">
+            </div>
+            <div class="col-sm-6 col-xs-12 columns">
+              <div class="row wines">
+                <div class="wine col-sm-6 col-xs-12 columns block1"><span class="wine_inline wine_malbec_inline visible-xs"><img src="img/bottle_pinotnoir.png" alt="Malbec"></span>
+                  <h3 class="subtitle">Pinot Noir</h3>
+                  <p>This 2015 Pinot Noir has an intense ruby red color with all the features to please any palate. It exhibits complex aromas of strawberry, cherry and fresh mint. It has an excellent structure, volume of fruit with a long pleasant finish. A Pinot Noir with the power of the Valle de Uco. Ideal to serve with past and processed meat.</p>
+
+                </div>
+
+                <div class="col-sm-6 col-xs-12 columns block2"><span class="wine_inline wine_chardonnay_inline visible-xs"><img src="img/bottle_chardonnay.png" alt="Chardonnay"></span>
+                  <h3 class="subtitle">Chardonnay</h3>
+                  <p>This 2016 wine was derived from 100% Chardonnay grapes. So that the unique qualities inherent in our high-altitude grapes can be best appreciated, we have chosen not to oak this distinctive wine. You will find this wine with butterscotch, lemon, pineapple and vanilla tastes and flavors reflecting the long hot days, cool nights and the clean air of Valle de Uco. It is best to experience this fine wine at 55° F.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-3 col-xs-12 columns winebottle hidden-xs"><img src="img/bottle_chardonnay.png" id="wine_chardonnay" alt="Chardonnay">
+            </div>
+          </div>
+
+
+          <div class="quotes col-sm-12">
+            <p >“Wine makes daily living easier, less hurried, with fewer tensions and more tolerance.”  <br>-Benjamin Franklin</p>
+
+
+            <a href="#stores">CaliVista Wines Available Here</a>
+
+          </div>
         </div>
+
+        <footer>
+          <p>Imported by MHW, Ltd. Manhasset, NY</p>
+        </footer>
       </section>
 
       <section id="visit" class="visit-page page">
@@ -219,12 +261,14 @@
           <div class="row">
             <div class="col-sm-6 col-sm-offset-3 col-xs-12">
               <div class="property">
-                <h3 class="title">CaliVista Vineyard House</h3>
+                <h3 class="title">CaliVista Air BnB</h3>
                 <p class="subtitle">Tunuyan, Mendoza Province, Argentina</p>
                 <a target="blank" href="https://www.airbnb.com/rooms/2628227">
                   <div class="property-photo" style="background-image:url(img/house.png)"></div>
                 </a>
-                <p>Our vineyard house has great views of the Andes and of course the CaliVista vineyard! Beautiful 3 bedroom house, one hour south of Mendoza!</p>
+                <p>Stay in our beautiful 3 bedroom vineyard house, one hour south of Mendoza! Enjoy great views of the Andes and, of course, our gorgeous
+                  CaliVista vineyard! Book your stay today,
+                <a target="blank" href="https://www.airbnb.com/rooms/2628227">here</a>.</p>
                 <a target="blank" href="https://www.airbnb.com/rooms/2628227" class="book btn btn-primary"><i class="fa fa-calendar"></i> Book</a>
               </div>
             </div>
@@ -232,7 +276,43 @@
         </div>
       </section>
 
+
+      <section id="stores" class="stores-page page">
+        <div class="container">
+          <div class="row">
+            <div class="stores col-lg-8">
+              <h3 class="title">Retailers</h3>
+
+              <h5>Capital Wine</h5><span>348 State St. Albany, NY</span>
+              <h5>Borisal Liquor &amp; Wine</h5><span>468 4th Ave Brooklyn, NY</span>
+              <h5>Bladwin Grapes and Grain</h5><span>983 Atlantic Ave Baldwin, NY 11510</span>
+              <h5>SKY Liquors</h5><span>33 Lafayette Brooklyn, NY</span>
+              <h5>Ambassador Wine and Liquor</h5><span>1020 2nd Ave New York, NY</span>
+
+            </div>
+
+
+
+            <div class="order col-lg-4">
+              <h3 class="title-buy">Buy Online</h3>
+              <br>
+              <a class="drinkup-logo" target="_blank" href="https://www.drinkupny.com/search_results_a/254.html?Search=calivista&Submit=#/?keywords=calivista"><img src="img/drinkup_logo.png"></a>
+
+              <p>Order CaliVista Wines to your door.<p>
+            </div>
+          </div>
+        </div>
+
+
+
+        <div class="col-xs-12 col-sm-12 logo_wrapper">
+          <h1 class="logo"></h1>
+        </div>
+
+      </section>
+
+
       <script src="libs/bootstrap/js/bootstrap.min.js"></script>
-      \<script src="libs/simpmodal/simpmodal.js"></script>
+      <script src="libs/simpmodal/simpmodal.js"></script>
       <script src="libs/swiper/swiper.min.js"></script>
       <script src="js/scripts.js"></script></body></html>
